works updated-five works

--- a/contact.html
+++ b/contact.html
@@ -35,17 +35,21 @@
     <div class="contact-content so-row">
         <div class="contact-img">
             <div class="contact-works">
-                <img id="c-img-1" src="img/me.jpeg">
-                <a href="/about"><span lang="en">/ about</span><span lang="ru">/ обо мне</span></a>
+                <a href="/about">
+                    <img id="c-img-1" src="img/me.jpeg">
+                    <p><span lang="en">/ about</span><span lang="ru">/ обо мне</span></p>
+                </a>
             </div>
             <div class="contact-works">
-                <img id="c-img-2" src="img/services.jpg">
-                <a href="/works"><span lang="en">/ works</span><span lang="ru">/ проекты</span></a>
+                <a href="/work">
+                    <img id="c-img-2" src="img/services.jpg">
+                    <p><span lang="en">/ works</span><span lang="ru">/ проекты</span></p>
+                </a>
             </div>
         </div>
 
         <div class="contact-info">
-            <h2><span lang="en">Let's get in touch</span><span lang="ru">Будем на связи</span></h2>
+            <h2><span lang="en">Let's get <br>in touch </span><span lang="ru">Есть идеи? <br>Будем на связи</span></h2>
 
             <div>
                 <div class="link contact-c">
