--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h1 id="show-invisible"><span lang="en">I do <span class="h-color">UI/UX</span> and <span class="h-color">branding</span></span><span lang="ru">для сайтов и брендов</span></h1>
         <p id="invisible">scroll down</p>
         <div class="greet-works" data-aos="fade-up">
-            <a href="/works"><img src="img/cases_medeq_1.png"></a>
-            <a href="/works"><span lang="en">/ selected<br>works<span style="font-size: 28px;">↴</span></span><span lang="ru">/ избранные<br>проекты<span style="font-size: 28px;">↴</span></span></a>
+            <a href="/work"><img src="img/cases_medeq_1.png"></a>
+            <a href="/work"><span lang="en">/ selected<br>works<span style="font-size: 28px;">↴</span></span><span lang="ru">/ избранные<br>проекты<span style="font-size: 28px;">↴</span></span></a>
         </div>
     </div>
 
@@ -100,7 +100,7 @@
         <div class="more-works so-row">
             <div class="more-works-card" data-aos="fade-up">
                 <a href="/silknwool">
-                    <img id="img1" src="img/silkwool/0.jpg">
+                    <img id="img1" src="img/silkwool/00.jpg">
                     <!-- <img class="img-h-1" src="img/silkwool/4.jpg"> -->
                 </a>
                 <div class="more-works-text">
