--- a/assistent.html
+++ b/assistent.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
-<html lang="ru">
 <head>
-  <title>Marina Orlova</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
+    <title>Marina Orlova</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sofia+Sans+Extra+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #161616;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
-            <a href="/work">work</a>
-            <a href="/services">services</a>
-            <a href="/contact">contact</a>
+            <div class="nav-links">
+                <a href="/work"><span lang="en">works</span><span lang="ru">проекты</span></a>
+                <a href="/about"><span lang="en">about</span><span lang="ru">обо мне</span></a>
+                <a href="/contact"><span lang="en">contact</span><span lang="ru">контакты</span></a>
+            </div>
+            <form>
+                <select id="lang-switch">
+                    <option value="en">EN</option>
+                    <option value="ru" selected>RU</option>
+                </select>
+            </form>
         </div>
     </div>
 
     <div class="case-link">
-        <a class="case-a" href="https://www.assistgroup.plus/" target=”_blank”><button>VISIT WEBSITE</button></a>
+        <a class="case-a" href="https://www.assistgroup.plus/" target=”_blank”><button><span lang="en">VISIT WEBSITE</span><span lang="ru">ПЕРЕЙТИ НА САЙТ</span></button></a>
+    </div>
+
+    <div class="case-d so-row" style="color: #fff;">
+        <div class="case-d-text">
+            <h2><span lang="en">Assistent Plus<br>Web Design</span><span lang="ru">Веб-дизайн для фирмы Ассистент Плюс</span></h2>
+            <div class="case-d-text-all">
+                <div class="case-d-desc-y">
+                    <h3><span lang="en">year</span><span lang="ru">год</span></h3>
+                    <p>2023</p>
+                </div>
+
+                <div class="case-d-desc">
+                    <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
+                    <p><span lang="en">Project for the security company Assistant Plus. <br>The client's request was a large number of unusual elements and animations.</span><span lang="ru">Проект для юридической компании Ассистент Плюс. <br>Пожаланием клиента было большое количество нестандартных композиционных решений, необычных элементов и анимации.</span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="prevnext">
+            <a href="/fanci" style="color: #fff; transform: rotate(-180deg); margin-top: 4px;">➔</a>
+            <a href="/silkwool" style="color: #fff;">➔</a>
+        </div>
     </div>
 
     <div class="case-images">
@@ -37,30 +68,47 @@
     </div>
 
     <div class="footer so-row">
-        <div class="foo-desc">
-            <h1>Let's work together</h1>
-            <p>I design digital products that help <br>businesses grow.</p>
-        </div>
-
-        <div class="foo-info">
-            <div class="foo-contact">
-                <a href="mailto:yarova0marina@gmail.com">yarova0marina@gmail.com</a>
-                <a href="tel:+79110180255">+7 911 018 02 55</a>
-            </div>
-
-            <div class="foo-links">
-                <p>Saint Petersburg, Russia</p>
-                <div class="foo-links-row">
-                    <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                    <a href="https://dribbble.com/mari_rina">Dribble</a>
+        <div class="foo-cont">
+            <div class="foo-desc">
+                <h1><span lang="en">Have a project in mind?<br><span style="color: #fff;">contact me ↴</span></span>
+                    <span lang="ru">Хотите создать проект?<br><span style="color: #fff;">напишите мне ↴</span></span></h1>
+                
+                <div class="foo-behance">
+                    <a href="https://www.behance.net/yarova0mar0675"><img src="img/behance.png"></a>
+                    <a href="https://www.behance.net/yarova0mar0675">/ Behance</a>
                 </div>
             </div>
 
-        </div>
+            <div class="foo-contact">
+                <div class="foo-text">
+                    <p><span lang="en">Contacts</span><span lang="ru">Контакты</span></p>
+                    <div class="foo-links">
+                        <a href="https://t.me/makotty">Telegram</a>
+                        <a href="https://wa.me/79110180255">WhatsApp</a>
+                        <a href="tel:+79110180255">+7 911 018 02 55</a>
+                    </div>
+                </div>
 
-        <div class="copyright">
-            <p>2023 © Maridmi</p>
+                <div class="foo-text">
+                    <p><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <div  class="foo-links">
+                        <a href="/about">Marina Orlova</a>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="copyright">
+                <h1>© 2024</h1>
+            </div>
         </div>
     </div>
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
+
+    <script>
+        AOS.init();
+    </script>
+
+    <script src="js/script.js"></script>
 </body>
+</html>
