works updated-five works

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <div class="s-present-greet">
             <p><span lang="en">/ hello</span><span lang="ru">/ обо мне</span></p>
             <!-- <h1>Launching something <span class="h-color">new </span>or transforming something that <span class="h-color">already work?</span></h1> -->
-            <h1><span lang="en"></span><span lang="ru">Веб-дизайнер,<br>да и просто<br>хороший человек</span></h1>
+            <h1><span lang="en">Marina Orlova<br>UI/UX designer<br>& nice person</span><span lang="ru">Марина Орлова,<br>UI/UX-дизайнер<br>и хороший человек</span></h1>
         </div>
 
         <div class="s-present-contact">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="s-img">
-            <img src="img/me.jpeg">
+            <img src="img/me-2.jpg">
         </div>
     </div>
 
@@ -118,7 +118,7 @@
 
                 <div class="s-card-hid" id="more4">
                     <p><span lang="en">Company presentation is a good way to share contacts with customers. It will build trust in customers and set the business apart from others.</span>
-                        <span lang="ru">Презентация — отличные способ донести до аудитории информацию об объекте презентации в удобной форме. Презентация является одним из маркетинговых и PR инструментов.</span>
+                        <span lang="ru">Презентация — отличный способ донести до аудитории информацию об объекте презентации в удобной форме. Презентация является одним из маркетинговых и PR инструментов.</span>
                     </p>
                     <h3><span lang="en">My capabilities:</span><span lang="ru">Я предлагаю:</span></h3>
                     <ul>
