--- a/assistent.html
+++ b/assistent.html
@@ -54,7 +54,7 @@
 
         <div class="prevnext">
             <a href="/fanci" style="color: #fff; transform: rotate(-180deg); margin-top: 4px;">➔</a>
-            <a href="/silkwool" style="color: #fff;">➔</a>
+            <a href="/silknwool" style="color: #fff;">➔</a>
         </div>
     </div>
 
