--- a/cls-web.html
+++ b/cls-web.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/silkwool" style="color: #fff; transform: rotate(-180deg); margin-top: 4px;">➔</a>
+            <a href="/silknwool" style="color: #fff; transform: rotate(-180deg); margin-top: 4px;">➔</a>
             <a href="/kauris-guideline" style="color: #fff;">➔</a>
         </div>
     </div>
