works updated-five works

--- a/about.html
+++ b/about.html
@@ -34,9 +34,8 @@
 
     <div class="s-present so-row">
         <div class="s-present-greet">
-            <p><span lang="en">/ hello</span><span lang="ru">/ обо мне</span></p>
-            <!-- <h1>Launching something <span class="h-color">new </span>or transforming something that <span class="h-color">already work?</span></h1> -->
-            <h1><span lang="en">Marina Orlova<br>UI/UX designer<br>& nice person</span><span lang="ru">Марина Орлова,<br>UI/UX-дизайнер<br>и хороший человек</span></h1>
+            <p><span lang="en">/ about</span><span lang="ru">/ обо мне</span></p>
+            <h1><span lang="en">I'm <span class="h-color">Marina</span>,<br>branding and<br>UI/UX designer</span><span lang="ru">Марина Орлова,<br><span class="h-color">UI/UX</span>-дизайнер</span></h1>
         </div>
 
         <div class="s-present-contact">
@@ -46,9 +45,13 @@
         </div>
 
         <div class="s-img">
-            <img src="img/me-2.jpg">
+            <img src="img/me-4.jpg">
         </div>
     </div>
+
+    <!-- <div class="about so-row">
+        <p><span lang="en"></span><span lang="ru">Привет! Я занимаюсь веб-дизайном и созданием фирменного стиля. Также есть опыт разработки сайтов с помощью html, css, js, а также конструкторов, таких как Tilda и Wordpress.</span></p>
+    </div> -->
 
     <div class="s-all-services so-row">
         <h2 class="s-left"><span lang="en">/ Services I do offer</span><span lang="ru">/ Мои услуги</span></h2>
@@ -135,7 +138,7 @@
     </div>
 
     <div class="img-cover">
-        <a href="/work">Explore cases</a>
+        <a href="/work"><span lang="en">Explore cases</span><span lang="ru">Смотреть проекты</span></a>
         <img src="img/assistent/8.jpg">
     </div>
 
