--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="explore-more so-row">
         <div class="explore-anno" data-aos="fade-up">
             <p><span lang="en">EXPLORE MORE</span><span lang="ru">БОЛЬШЕ РАБОТ</span></p> 
-            <a href="/work"><span lang="en">VIEW ALL CASES <span style="font-size: 24px;"> ↘</span></span><span lang="ru">СМОТРЕТЬ ВСЕ <span style="font-size: 24px;"> ↘</span></span></a>
+            <a href="/work"><span lang="en">VIEW ALL CASES <span style="font-size: 28px;">↴</span></span><span lang="ru">СМОТРЕТЬ ВСЕ <span style="font-size: 28px;">↴</span></span></a>
         </div>
 
         <div class="explore-cont" data-aos="fade-up">
