--- a/mda.html
+++ b/mda.html
@@ -33,44 +33,35 @@
     </div>
     
     <div class="case-link">
-        <a class="case-a" href="https://silk.ru/" target=”_blank”><button><span lang="en">VISIT WEBSITE</span><span lang="ru">ПЕРЕЙТИ НА САЙТ</span></button></a>
+        <a class="case-a" href="https://ru.mdashipping.us/" target=”_blank”><button><span lang="en">VISIT WEBSITE</span><span lang="ru">ПЕРЕЙТИ НА САЙТ</span></button></a>
     </div>
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Silk&Wool Website Re-Design</span><span lang="ru">Редизайн для магазина ковров "Шерсть и Шёлк"</span></h2>
+            <h2><span lang="en">MDA Shipping Web Design</span><span lang="ru">Веб-дизайн для перевозчика MDA Shipping</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2023</p>
+                    <p>2022</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en">Redesign for the Wool and Silk carpets website. The website is availible via link, and the pre-redesign version can be viewed at the bottom of this page.</span><span lang="ru">Редизайн интернет-магазина ковров "Шерсть и Шелк" реализован в современном стиле с упором на качественные фото. Вебсайт доступен по ссылке, а версию до редизайна можно посмотреть внизу этой страницы.</span></p>
+                    <p><span lang="en"></span><span lang="ru"></span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/assistent" style="color: #000000; transform: rotate(-180deg); margin-top: 4px;">➔</a>
             <a href="/cls-web" style="color: #000000;">➔</a>
         </div>
     </div>
 
     <div class="case-images">
-        <img src="img/silkwool/00.jpg">
-        <img src="img/silkwool/2.jpg">
-        <img src="img/silkwool/3.jpg">
-        <img src="img/silkwool/4.jpg">
-        <img src="img/silkwool/5.jpg">
-        <img src="img/silkwool/6.jpg">
-        <img src="img/silkwool/7.jpg">
-        <img src="img/silkwool/8.jpg">
-        <img src="img/silkwool/9.jpg">
-        <img src="img/silkwool/10.jpg">
-        <img src="img/silkwool/11.jpg">
-        <img src="img/silkwool/12.jpg">
+        <img src="img/mda/1.jpg">
+        <img src="img/mda/2.jpg">
+        <img src="img/mda/3.jpg">
+        <img src="img/mda/4.jpg">
     </div>
 
     <div class="footer so-row">
