--- a/a1.html
+++ b/a1.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #F6FCF2;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -38,7 +38,7 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">A1-Agrohim Web Design</span><span lang="ru">Веб-дизайн для А1-Агрохим</span></h2>
+            <h2><span lang="en">A1-Agrohim <br>Web Design</span><span lang="ru">Веб-дизайн для <br>А1-Агрохим</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
@@ -47,13 +47,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">A1-Agrokhim is an independent trader of mineral fertilizers. A presentation site with an emphasis on agricultural aesthetics was developed for this company.</span><span lang="ru">А1-Агрохим — независимый трейдер минеральных удобрений. <br>Для этой компании был разработан презентационный сайт с акцентом на сельскохозяйственную эстетику.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/sharing" style="color: #000000;">➔</a>
         </div>
     </div>
 
