--- a/aes.html
+++ b/aes.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #EDECF1;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -34,22 +34,22 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">American Express Shop Design</span><span lang="ru">Интернет-магазин American Express Shop</span></h2>
+            <h2><span lang="en">American Express Shop Design</span><span lang="ru">Интернет-магазин <br>American Express Shop</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2023</p>
+                    <p>2022</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">AES is an international marketplace with various categories of goods. During the development process, the user scenario was thought out and tested. The store is under development.</span><span lang="ru">AES является международной торговой площадкой с различными категориями товаров. В процессе разработки был продуман и протестирован пользовательский сценарий. Магазин находится в разработке.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/borosa" style="color: #000000;">➔</a>
         </div>
     </div>
 
