--- a/assistent.html
+++ b/assistent.html
@@ -53,8 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/fanci" style="color: #fff; transform: rotate(-180deg); margin-top: 4px;">➔</a>
-            <a href="/silknwool" style="color: #fff;">➔</a>
+            <a href="/medeq" style="color: #fff;">➔</a>
         </div>
     </div>
 
