--- a/avansbox.html
+++ b/avansbox.html
@@ -38,22 +38,22 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Avansbox Company Web Design</span><span lang="ru">Дизайн сайта для финансовой компании Avansbox</span></h2>
+            <h2><span lang="en">Avansbox Company <br>Web Design</span><span lang="ru">Дизайн сайта <br>для компании Avansbox</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2023</p>
+                    <p>2021</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Development of a website for a company that allows solving urgent financial problems of an employee. At the client's request, the website is made in a standard block structure and will be understandable to the client with any user experience.</span><span lang="ru">Разработка сайта для компании, которая позволяет решить срочные финансовые проблемы сотрудника. По пожеланию клиента сайт выполнен в стандартной блочной структуре и будет понятен клиенту с любым пользовательским опытом.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/a1" style="color: #000000;">➔</a>
         </div>
     </div>
 
@@ -64,9 +64,6 @@
         <img src="img/avansbox/4.jpg">
         <img src="img/avansbox/5.jpg">
         <img src="img/avansbox/6.jpg">
-        <img src="img/avansbox/7.jpg">
-        <img src="img/avansbox/8.jpg">
-        <img src="img/avansbox/9.jpg">
         <img src="img/avansbox/10.jpg">
     </div>
 
