--- a/babka.html
+++ b/babka.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #E5E1DE;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -38,22 +38,22 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Babka Bakery Branding</span><span lang="ru">Гайдлайн для пекарни Babka Bakery</span></h2>
+            <h2><span lang="en">Babka Bakery <br>Branding</span><span lang="ru">Гайдлайн для пекарни <br>Babka Bakery</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2023</p>
+                    <p>2021</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">A guideline was developed for the Babka Bakery, describing the logo and other corporate elements.</span><span lang="ru">Бабка — выпечка, блюдо белорусской кухни. Для пекарни Babka Bakery был разработан гайдлайн с описанием логотипа, а также других фирменных элементов.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/otoplenych" style="color: #000000;">➔</a>
         </div>
     </div>
 
