--- a/borosa.html
+++ b/borosa.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body  style="background-color: #000000;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -36,9 +36,9 @@
         <a class="case-a" href="https://borosa.ru/" target=”_blank”><button><span lang="en">VISIT WEBSITE</span><span lang="ru">ПЕРЕЙТИ НА САЙТ</span></button></a>
     </div>
     
-    <div class="case-d so-row" style="color: #000000;">
+    <div class="case-d so-row" style="color: #ffffff;">
         <div class="case-d-text">
-            <h2><span lang="en">Borosa Web Design and Development</span><span lang="ru">Сайт для архитектурного бюро BOROSA</span></h2>
+            <h2><span lang="en">Borosa Web Design and Development</span><span lang="ru">Сайт для архитектурного бюро "BOROSA"</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
@@ -47,13 +47,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">The architectural bureau "Borosa" creates spaces taking into account not only the wishes of the client, but also his future life scenario. The site is made on the Tilda platform and is available via link.</span><span lang="ru">Архитектурное бюро "Borosa" создает пространства, учитывая не только пожелания клиента, но и его будущий сценарий жизни. Сайт выполнен на платформе Tilda и доступен по ссылке.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/babka" style="color: #ffffff;">➔</a>
         </div>
     </div>
 
