--- a/cls.html
+++ b/cls.html
@@ -38,22 +38,22 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">A1-Agrohim Web Design</span><span lang="ru">Веб-дизайн для А1-Агрохим</span></h2>
+            <h2><span lang="en">Coleman Legal Services <br>Brand Guidelines</span><span lang="ru">Гайдлайн для <br>Coleman Legal Services</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2022</p>
+                    <p>2021</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Coleman Legal Services (CLS) is a law firm whose slogan is: "Within the Law. Beyond Competition." A logo was developed for this company, as well as other elements of the corporate identity. In the logo, it was decided to use the abbreviation CLS in a stable square figure.</span><span lang="ru">Coleman Legal Services (CLS) — юридическая фирма, слоган которой: "В рамках закона. Вне конкуренции". Для этой компании был разработан логотип, а также другие элементы фирменного стиля. В логотипе было решено использовать аббревиатуру CLS в устойчивой фигуре - квадрате.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/pinoli-w" style="color: #000000;">➔</a>
         </div>
     </div>
 
