--- a/fanci.html
+++ b/fanci.html
@@ -53,8 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/kauris-guideline" style="color: #000000; transform: rotate(-180deg); margin-top: 4px;">➔</a>
-            <a href="/assistent" style="color: #000000;">➔</a>
+            <a href="/mda" style="color: #000000;">➔</a>
         </div>
     </div>
 
