--- a/kauris-catalog.html
+++ b/kauris-catalog.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #1A110C;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -36,13 +36,13 @@
         <a class="case-a" href="https://drive.google.com/file/d/19eVHznuUJW7iix-oZ3Gzz4Pmvvi1bCg-/view?usp=sharing" target=”_blank”><button><span lang="en">FULL VERSION HERE</span><span lang="ru">СМОТРЕТЬ ПОЛНУЮ ВЕРСИЮ</span></button></a>
     </div>
     
-    <div class="case-d so-row" style="color: #000000;">
+    <div class="case-d so-row" style="color: #ffffff;">
         <div class="case-d-text">
-            <h2><span lang="en">Kauris Fashion Catalog</span><span lang="ru">Каталог женской одежды для магазина Kauris</span></h2>
+            <h2><span lang="en">Kauris Fashion Catalog</span><span lang="ru">Каталог женской одежды для магазина "Kauris"</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2022</p>
+                    <p>2024</p>
                 </div>
 
                 <div class="case-d-desc">
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/assistent" style="color: #ffffff;">➔</a>
         </div>
     </div>
 
