--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -53,8 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000; transform: rotate(-180deg); margin-top: 4px;">➔</a>
-            <a href="/fanci" style="color: #000000;">➔</a>
+            <a href="/kauris-catalog" style="color: #000000;">➔</a>
         </div>
     </div>
 
