--- a/mda.html
+++ b/mda.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #C9DDF5;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -42,18 +42,18 @@
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
-                    <p>2022</p>
+                    <p>2023</p>
                 </div>
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">MDA Shipping is engaged in container transportation from the USA to all over the world. A classic multi-page website with schemes of loading cars and equipment into containers was created for MDA.</span><span lang="ru">MDA Shipping занимается контейнерными перевозками из США по всему миру. Для MDA был создан классический многостраничный сайт со схемами погрузки автомобилей и техники в контейнеры.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/avansbox" style="color: #000000;">➔</a>
         </div>
     </div>
 
