--- a/medeq.html
+++ b/medeq.html
@@ -38,7 +38,7 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Medeq Beauty Catalog</span><span lang="ru">Каталог для Medeq Beauty</span></h2>
+            <h2><span lang="en">Medeq Beauty <br>Catalog Design</span><span lang="ru">Каталог для <br>Medeq Beauty</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
@@ -47,13 +47,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Medeq is a multi-profile company. The task was to create a catalog for the Medeq Beauty division, while maintaining the company's corporate style.</span><span lang="ru">Medeq — многопрофильная фирма. Задачей было выполнить каталог для подразделения Medeq Beauty, сохранив фирменную стилистику компании.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/fanci" style="color: #000000;">➔</a>
         </div>
     </div>
 
