--- a/otoplenych.html
+++ b/otoplenych.html
@@ -47,13 +47,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Otoplenych is a company that installs and designs engineering systems. A multi-page B2C website has been developed for the company, its focus is the interactive image of communications on the main screen.</span><span lang="ru">Отопленыч — компания по монтажу и проектированию инженерных систем. Для компании разработан многостраничный B2C сайт, его акцентом является интерактивное изображение коммуникаций на главном экране.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/cls" style="color: #000000;">➔</a>
         </div>
     </div>
 
