--- a/sharing.html
+++ b/sharing.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body style="background-color: #F2F2F2;">
+<body style="background-color: #E6E6E6;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -47,14 +47,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Sharing Digital is engaged in business promotion among various Internet platforms. The site had to be made interactive and memorable, various animations and screen transitions were worked out.</span><span lang="ru">Sharing Digital занимается продвижением бизнеса среди различных интернет-площадок. Сайт необходимо было сделать интерактивным и запоминающимся, были проработаны различные анимации и переходы экранов.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/assistent" style="color: #000000; transform: rotate(-180deg); margin-top: 4px;">➔</a>
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/aes" style="color: #000000;">➔</a>
         </div>
     </div>
 
