works pages updated

--- a/borosa.html
+++ b/borosa.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/babka" style="color: #ffffff;">➔</a>
+            <a href="/aes" style="color: #ffffff;">➔</a>
         </div>
     </div>
 
