--- a/cls-web.html
+++ b/cls-web.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/kauris-guideline" style="color: #fff;">➔</a>
+            <a href="/kauris-web" style="color: #fff;">➔</a>
         </div>
     </div>
 
