--- a/kauris-catalog.html
+++ b/kauris-catalog.html
@@ -47,19 +47,20 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">For the premium brand of women's clothing "Kauris" the Spring-Summer and Fall-Winter 2024 catalogues were developed. The full version of the Fall-Winter catalogue is presented at the link.</span><span lang="ru">Для премиум-бренда женской одежды "Kauris" были разработаны каталоги Весна-Лето и Осень-Зима 2024. Полная версия каталога Осень-Зима представлена по ссылке.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/assistent" style="color: #ffffff;">➔</a>
+            <a href="/kauris-guideline" style="color: #ffffff;">➔</a>
         </div>
     </div>
 
     <div class="case-images">
         <img src="img/kauris-catalog/2.jpg">
         <img src="img/kauris-catalog/3.jpg">
+        <img src="img/kauris-catalog/0.jpg">
     </div>
 
     <div class="footer so-row">
