--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -38,7 +38,7 @@
 
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Kauris Guidelines</span><span lang="ru">Брендбук для магазина одежды Kauris</span></h2>
+            <h2><span lang="en">Kauris Guidelines</span><span lang="ru">Брендбук для магазина одежды "Kauris"</span></h2>
             <div class="case-d-text-all">
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/kauris-catalog" style="color: #000000;">➔</a>
+            <a href="/assistent" style="color: #000000;">➔</a>
         </div>
     </div>
 
