--- a/pinoli-w.html
+++ b/pinoli-w.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #F5F2EB;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -36,7 +36,7 @@
         <a class="case-a" href="https://maridmi.github.io/pinoli.github.io/" target=”_blank”><button><span lang="en">VISIT WEBSITE</span><span lang="ru">ПЕРЕЙТИ НА САЙТ</span></button></a>
     </div>
     
-    <div class="case-d so-row" style="color: #000000;">
+    <div class="case-d so-row" style="color: #DA4E00;">
         <div class="case-d-text">
             <h2><span lang="en">PINOLI WEB DESIGN AND DEVELOPMENT</span><span lang="ru">Разработка сайта для ресторана "Pinoli"</span></h2>
             <div class="case-d-text-all">
@@ -47,29 +47,24 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">Pinoli is an Italian restaurant in Chelyabinsk. The existing website <a href="https://pinoli.ru/" style="color: #097b3e;">https://pinoli.ru/</a>, developed by me on the Tilda platform in 2022, was redesigned. Various elements of the brand's corporate style were added to the new concept. The website is available via link.</span><span lang="ru">Pinoli — ресторан итальянской кухни в г. Челябинск. Был произведен редизайн существующего сайта <a href="https://pinoli.ru/" style="color: #097b3e;">https://pinoli.ru/</a>, разработанного мной на платформе Tilda в 2022 году. В новой концепции были добавлены различные элементы фирменного стиля бренда. Сайт доступен по ссылке.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/silknwool" style="color: #000000;">➔</a>
+            <a href="/silknwool" style="color: #DA4E00;">➔</a>
         </div>
     </div>
 
     <div class="case-images">
-        <img src="img/pinoli-w/00.jpg">
+        <img src="img/pinoli-w/1.jpg">
         <img src="img/pinoli-w/2.jpg">
         <img src="img/pinoli-w/3.jpg">
         <img src="img/pinoli-w/4.jpg">
         <img src="img/pinoli-w/5.jpg">
         <img src="img/pinoli-w/6.jpg">
         <img src="img/pinoli-w/7.jpg">
-        <img src="img/pinoli-w/8.jpg">
-        <img src="img/pinoli-w/9.jpg">
-        <img src="img/pinoli-w/10.jpg">
-        <img src="img/pinoli-w/11.jpg">
-        <img src="img/pinoli-w/12.jpg">
     </div>
 
     <div class="footer so-row">
