--- a/pinoli.html
+++ b/pinoli.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: #F5F2EB;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -36,7 +36,7 @@
         <a class="case-a" href="https://drive.google.com/file/d/1Ee-SdhZyxTtvei_AqBokNu1Ge9NL4jyG/view?usp=sharing" target=”_blank”><button><span lang="en">FULL VERSION HERE</span><span lang="ru">СМОТРЕТЬ ПОЛНУЮ ВЕРСИЮ</span></button></a>
     </div>
     
-    <div class="case-d so-row" style="color: #000000;">
+    <div class="case-d so-row" style="color: #DA4E00;">
         <div class="case-d-text">
             <h2><span lang="en">PINOLI STYLE GUIDE</span><span lang="ru">Брендбук для ресторана "Pinoli"</span></h2>
             <div class="case-d-text-all">
@@ -47,29 +47,26 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en"></span><span lang="ru"></span></p>
+                    <p><span lang="en">The visual of the brand "Pinoli" is made in the Vintage Chick style with a modern interpretation. The corporate style reflects love for Italy, its warmth and traditions. And in combination with non-standard solutions in graphic elements and composition, the overall visual style will be memorable.</span><span lang="ru">Визуал бренда "Pinoli" выполнен в стиле Vintage Chick в современном прочтении. В фирменном стиле отражается любовь к Италии, ее теплу и традициям. <br>И в сочетании с нестандартными решениями в графических элементах и композиции, общий визуальный стиль будет запоминающимся.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
-            <a href="/cls-web" style="color: #000000;">➔</a>
+            <a href="/cls-web" style="color: #DA4E00;">➔</a>
         </div>
     </div>
 
     <div class="case-images">
-        <img src="img/pinoli/00.jpg">
-        <img src="img/pinoli/2.jpg">
+        <img src="img/pinoli/0.png">
+        <img src="img/pinoli/2.png">
+        <img src="img/pinoli/3.png">
+        <a href="/pinoli.github.io"><img src="img/pinoli/round.svg" class="greet-round-img"></a>
         <img src="img/pinoli/3.jpg">
         <img src="img/pinoli/4.jpg">
         <img src="img/pinoli/5.jpg">
         <img src="img/pinoli/6.jpg">
         <img src="img/pinoli/7.jpg">
-        <img src="img/pinoli/8.jpg">
-        <img src="img/pinoli/9.jpg">
-        <img src="img/pinoli/10.jpg">
-        <img src="img/pinoli/11.jpg">
-        <img src="img/pinoli/12.jpg">
     </div>
 
     <div class="footer so-row">
