--- a/aes.html
+++ b/aes.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
-<body style="background-color: #EDECF1;">
+<body style="background-color: #D0D0D0;">
     <div class="topnav so-row">
         <a href="/"><img src="img/navlogo.svg"></a>
         <div class="navlist">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/borosa" style="color: #000000;">➔</a>
+            <a href="/babka" style="color: #000000;">➔</a>
         </div>
     </div>
 
