--- a/sharing.html
+++ b/sharing.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/aes" style="color: #000000;">➔</a>
+            <a href="/overwave" style="color: #000000;">➔</a>
         </div>
     </div>
 
