works pages updated

--- a/assistent.html
+++ b/assistent.html
@@ -38,8 +38,13 @@
 
     <div class="case-d so-row" style="color: #fff;">
         <div class="case-d-text">
-            <h2><span lang="en">Assistent Plus<br>Web Design</span><span lang="ru">Веб-дизайн для фирмы Ассистент Плюс</span></h2>
+            <h2><span lang="en">Assistent Plus</span><span lang="ru">Ассистент Плюс</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p>UI/UX</p>
+                </div>
+                
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2023</p>
@@ -47,7 +52,7 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en">Project for the security company Assistant Plus. <br>The client's request was a large number of unusual elements and animations.</span><span lang="ru">Проект для юридической компании Ассистент Плюс. <br>Пожаланием клиента было большое количество нестандартных композиционных решений, необычных элементов и анимации.</span></p>
+                    <p><span lang="en">Project for the law company Assistant Plus. The client's request was to add a lot of unusual elements and animations to the website.</span><span lang="ru">Проект для юридической компании Ассистент Плюс. Пожаланием клиента было большое количество нестандартных композиционных решений, необычных элементов и анимации.</span></p>
                 </div>
             </div>
         </div>
