--- a/pinoli.html
+++ b/pinoli.html
@@ -47,7 +47,7 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en">The visual of the brand "Pinoli" is made in the Vintage Chick style with a modern interpretation. The corporate style reflects love for Italy, its warmth and traditions. And in combination with non-standard solutions in graphic elements and composition, the overall visual style will be memorable.</span><span lang="ru">Визуал бренда "Pinoli" выполнен в стиле Vintage Chick в современном прочтении. В фирменном стиле отражается любовь к Италии, ее теплу и традициям. <br>И в сочетании с нестандартными решениями в графических элементах и композиции, общий визуальный стиль будет запоминающимся.</span></p>
+                    <p><span lang="en">The visual of the brand "Pinoli" is made in the Vintage Chick style with a modern interpretation. The corporate style reflects love for Italy, its warmth and traditions. And in combination with non-standard solutions in graphic elements and composition, the overall visual style will be memorable.</span><span lang="ru">Визуал бренда "Pinoli" выполнен в стиле Vintage Chick в современном прочтении. В фирменном стиле отражается любовь к Италии, ее теплу и традициям. И в сочетании с нестандартными решениями в графических элементах и композиции, общий визуальный стиль будет запоминающимся.</span></p>
                 </div>
             </div>
         </div>
