--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -38,8 +38,13 @@
 
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Kauris Guidelines</span><span lang="ru">Брендбук для магазина одежды "Kauris"</span></h2>
-            <div class="case-d-text-all">
+            <h2><span lang="en">KAURIS WOMEN CLOTHING</span><span lang="ru">KAURIS</span></h2>
+            <div class="case-d-text-all">            
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p><span lang="en">Branding</span><span lang="ru">Брендинг</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2023</p>
