--- a/work.html
+++ b/work.html
@@ -225,8 +225,8 @@
         </div>
     </div>
 
-    <div class="footer so-row">
-        <div class="foo-cont">
+    <footer class="so-row">
+        <div class="foo-top-cont">
             <div class="foo-desc">
                 <h1><span lang="en">Have a project in mind?<br><span style="color: #fff;">contact me ↴</span></span>
                     <span lang="ru">Хотите создать проект?<br><span style="color: #fff;">напишите мне ↴</span></span></h1>
@@ -248,18 +248,19 @@
                 </div>
 
                 <div class="foo-text">
-                    <p><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-desk"><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-mob"><span lang="en">Developed and Designed</span><span lang="ru">Разработка и дизайн</span></p>
                     <div  class="foo-links">
                         <a href="/about">Marina Orlova</a>
                     </div>
                 </div>
             </div>
-            
-            <div class="copyright">
-                <h1>© 2024</h1>
-            </div>
         </div>
-    </div>
+        
+        <div class="copyright">
+            <h1>© 2024</h1>
+        </div>
+    </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
 
