--- a/work.html
+++ b/work.html
@@ -225,7 +225,7 @@
         </div>
     </div>
 
-    <footer class="so-row">
+    <footer>
         <div class="foo-top-cont">
             <div class="foo-desc">
                 <h1><span lang="en">Have a project in mind?<br><span style="color: #fff;">contact me ↴</span></span>
@@ -257,9 +257,7 @@
             </div>
         </div>
         
-        <div class="copyright">
-            <h1>© 2024</h1>
-        </div>
+        <h1 class="copyright">© 2024</h1>
     </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
